crates/core/tests/ui/typed_query/fail/ambiguous_optional_ownership.stderr
error: this SQL construct is outside the typed_sql v1 subset: typed_sql v1 requires `$value?` to directly own a WHERE/JOIN comparison predicate or the full LIMIT/OFFSET expression; wrap larger predicate fragments in `(...)?` when the ownership boundary would otherwise be ambiguous
          |
        1 | SELECT users.id FROM users WHERE users.id = - $user_id?
          |                                               ^^^^^^^^^
       help: attach `?` only when the placeholder directly owns an entire WHERE/JOIN comparison or the full LIMIT/OFFSET expression; use `(...)?` for larger predicate groups
  --> tests/ui/typed_query/fail/ambiguous_optional_ownership.rs:10:54
   |
10 |         SELECT users.id FROM users WHERE users.id = -$user_id?
   |                                                      ^
